[package]
name = "lang-cl"
version = "0.1.0"
authors = ["Vickenty Fesunov <kent@setattr.net>", "Keyvan Kambakhsh <keyvankambakhsh@gmail.com"]
license = "MIT/Apache-2.0"
description = "Lightweight OpenCL parser"
include = [ "/src/**/*.rs", "Cargo.toml", "/LICENSE*", "/README.md" ]
documentation = "https://docs.rs/lang-cl"
homepage = "https://github.com/keyvank/lang-cl"
repository = "https://github.com/keyvank/lang-cl"
keywords = [ "ast", "opencl", "parser", "opencl-language" ]
categories = [ "parser-implementations" ]

[badges]
travis-ci = { repository = "keyvank/lang-cl" }
